fix on login flickering

--- a/src/frontend/styles/_shared/_header_footer.styl
+++ b/src/frontend/styles/_shared/_header_footer.styl
@@ -7,7 +7,7 @@ header.header
 	color: white
 	height: 42px
 	z-index: 3
-	opacity: 1
+	
 	.background
 		absolute top 0 left 0
 		width: 100%
@@ -107,7 +107,10 @@ header.header
 		
 	.messages_icon
 		display: block
-		
+	
+.first_loaded
+	header
+		opacity: 1	
 .logged
 	header
 		.user_logged
